Add docs/ technical documentation and slim the root README
Add a docs/ set (English, with Mermaid diagrams rendered by GitHub):
README (overview), ARCHITECTURE (packages, patterns, execution flow,
improvement areas), CLASSES (components + data model), API (MLDonkey
protocol, CLI arguments; there is no REST API), DEVELOPMENT (config,
dependencies, build/run/test/extend), and HISTORY (version lineage +
decompilation provenance). Sections are numbered by the docs/README
index (README=1 .. HISTORY=6); all cross-references resolve.

Slim the root README into a user-focused landing page (~276 -> ~146
lines): move the deep build/dependency/packaging/CI/AppImage/silent-MSI
detail into docs/DEVELOPMENT.md, add a Documentation section linking to
docs/, keep a build quickstart and a compact associations section, and
move the version-history table to docs/HISTORY.md. Fix stale content:
drop the removed IRC client / PircBot dependency / deleted
sancho.utility.regex adapter references.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>