@@ -10,7 +10,7 @@
 **Sancho** is a Java/SWT desktop GUI for the **MLDonkey** peer-to-peer client
 (eDonkey2000, Kademlia, BitTorrent and more), originally developed by
 Rutger M. Ovidius in the mid-2000s. It monitors and controls an MLDonkey core:
-transfers, search, servers, friends, shares, IRC and a built-in web browser.
+transfers, search, servers, friends, shares and a built-in web browser.
 
 This repository (`sancho-p2p`) **revives** it — the source has been recovered and
 ported to build and run on a **current JDK (17+)** against modern SWT/JFace, with
@@ -50,49 +50,21 @@ JRE. The macOS `.dmg` is **unsigned**, so Gatekeeper will warn — right-click �
 Sancho needs a reachable **MLDonkey core** — set the host/port and login in
 Preferences (or the first-run setup wizard).
 
-## 🏷 Versions
+## 🏷 Version history
 
-Sancho used a `0.9.4-NN` snapshot scheme.
+Sancho used a `0.9.4-NN` snapshot scheme, now plain-incrementing (`0.9.5`, `0.9.6`, …).
+`main` always holds the newest modernized build.
 
-| Version | What it is | Where |
-| --- | --- | --- |
-| `0.9.4-23` | Early **authentic** hand-written source | [`0.9.4-23`](../../releases/tag/0.9.4-23) tag — `git checkout 0.9.4-23` |
-| `0.9.4-59` | Last **published** binary (source lost); recovered by decompilation | [`0.9.4-59`](../../releases/tag/0.9.4-59) tag / `decompiled-0.9.4-59` branch |
-| `0.9.4-60` | First **modernized** build: decompiled `-59` ported to modern SWT/JFace + JDK 17, plus bug fixes | [Release](../../releases/tag/0.9.4-60) |
-| `0.9.4-61` | Maintained **JSch** fork + CI build check | [Release](../../releases/tag/0.9.4-61) |
-| `0.9.4-62` | **Cross-platform** release artifacts (Windows / Linux / macOS) | [Release](../../releases/tag/0.9.4-62) |
-| `0.9.4-63` | Self-contained **uber-jar** (one-file `java -jar`) | [Release](../../releases/tag/0.9.4-63) |
-| `0.9.4-64` | Dropped `gnu-regexp` for the JDK's `java.util.regex` | [Release](../../releases/tag/0.9.4-64) |
-| `0.9.4-65` | Release pipeline off deprecated Node-20 artifact actions | [Release](../../releases/tag/0.9.4-65) |
-| `0.9.4-66` | macOS external-link fix, platform-code cleanup, Dependabot | [Release](../../releases/tag/0.9.4-66) |
-| `0.9.4-67` | Windows **`.msi` installer** (optional association prompt + silent-install support) | [Release](../../releases/tag/0.9.4-67) |
-| `0.9.4-68` | Cleaner build output (shade + checksum warnings), serialized release runs | [Release](../../releases/tag/0.9.4-68) |
-| `0.9.4-69` | Startup toolbar fix, real build version in the title, Edge web browser on Windows | [Release](../../releases/tag/0.9.4-69) |
-| `0.9.4-70` | Latent-bug sweep (core spawn, Linux links, sort contracts, leaks), local stable sort, pure `java.util.regex` | [Release](../../releases/tag/0.9.4-70) |
-| `0.9.4-71` | Virtual-table render fix (stale/duplicate/stuck rows), IRC nick + connect-dialog fixes | [Release](../../releases/tag/0.9.4-71) |
-| `0.9.4-72` | Audit sweep: tree render, UI-freeze fixes, numeric overflows, ~6 dialog defaults, IRC, browser/DnD, tray & protocol-parsing regressions, cross-platform (macOS ⌘, Linux preview/tray) | [Release](../../releases/tag/0.9.4-72) |
-| `0.9.4-73` | Working localization: translations bundled in the jar, language picker fixed, dialog buttons + Preferences window + stray strings routed through i18n, all 14 locales updated (es_ES 100%) | [Release](../../releases/tag/0.9.4-73) |
-| `0.9.4-74` | Audit fixes: DecimalFormat data race, Windows-registry crash, Download-Complete parse crash, chunk-image cache leak, ETA sort + robustness guards | [Release](../../releases/tag/0.9.4-74) |
-| `0.9.4-75` | **IRC client removed** (drops the abandoned `pircbot` dependency); decompiler cleanup begun — inner classes merged back + descriptive variable names across `sancho.core`/`utility`/`model` + JFace viewers; per-user Windows association via `reg.exe` | [Release](../../releases/tag/0.9.4-75) |
-| `0.9.4-76` | **Decompiler cleanup finished** — every split `$` inner-class file merged and all `varN` renamed tree-wide; update check moved to the **GitHub releases API** (+ interactive Help-menu check); Preferences dialog i18n/UX (localized `Core:` sections, translated/relabelled buttons, dependent checkboxes); configurable advanced-search formats | [Release](../../releases/tag/0.9.4-76) |
-| `0.9.4-77` | Silent-failure fixes: installed-MSI Windows association now writes its `.reg` to a writable temp dir (+ warning on failure), failed screenshot save reports an error dialog | [Release](../../releases/tag/0.9.4-77) |
-| `0.9.5` | **Plain incrementing version scheme** (drops the `0.9.4-<build>` suffix); fixes installers refusing to upgrade an existing install (the internal version was frozen at `0.9.4`, so the MSI ProductVersion never rose) | [Release](../../releases/tag/0.9.5) |
-| `0.9.6` | **Windows associations: status + startup check** — the *Windows Registry* page shows each protocol/`.torrent` association's current state (Sancho / another app, user vs. machine); a startup check offers to create missing ones (or stop asking); toggle in Preferences | [Release](../../releases/tag/0.9.6) |
-
-**`main`** always holds the newest modernized build; [CHANGELOG.md](CHANGELOG.md)
-and the [Releases](../../releases) page are the authoritative, up-to-date list.
-
-> `sancho-src/src` on `main` is **not** authentic source. It was recovered by
-> decompiling the last published `0.9.4-59` binary (Vineflower) and then ported to
-> modern SWT/JFace. It includes features that never had preserved source (IRC, web
-> browser, network stats, file comments). For the genuine early source, use the
-> `0.9.4-23` tag. Reconstruction caveats: the GCJ-only `Prov` bootstrap is a no-op
-> stub, `MyMenuManager` / dynamic field-editor clearing use reflection over JFace
-> internals, and the removed SWT Mozilla backend is mapped to Edge on Windows.
+- **Per-release changes:** [CHANGELOG.md](CHANGELOG.md) and the [Releases](../../releases) page
+  (authoritative, up-to-date).
+- **Version lineage & decompilation provenance:** [docs/HISTORY.md](docs/HISTORY.md) — note that
+  `sancho-src/src` on `main` is **not** authentic source (recovered by decompiling the `0.9.4-59`
+  binary); for genuine early source use the `0.9.4-23` tag.
 
 ## 📦 Contents
 
 - `sancho-src/` — Java source tree (see the version note above)
+- `docs/` — technical documentation (architecture, classes, protocol, development)
 - `pom.xml` — Maven build
 - `local-repo/` — signature-stripped JFace (see dependencies)
 - `tools/` — `build-app.ps1` (native packages) and `unsign-libs.ps1`
@@ -101,155 +73,56 @@ and the [Releases](../../releases) page are the authoritative, up-to-date list.
 - `appimage/` — AppDir used to build the legacy Linux AppImage
 - `CHANGELOG.md`, `ToDo.md`, `LICENSE`
 
+## 📚 Documentation
+
+Full technical documentation lives in **[docs/](docs/)** (rendered on GitHub, with Mermaid
+diagrams):
+
+| Document | Contents |
+| --- | --- |
+| [docs/README.md](docs/README.md) | Overview: goal, functionality, technologies, requirements |
+| [docs/ARCHITECTURE.md](docs/ARCHITECTURE.md) | Package structure, design patterns, general & execution flow, improvement areas |
+| [docs/CLASSES.md](docs/CLASSES.md) | Components by package/class and the data model |
+| [docs/API.md](docs/API.md) | MLDonkey protocol (opcodes), command-line arguments (no REST API) |
+| [docs/DEVELOPMENT.md](docs/DEVELOPMENT.md) | Configuration, dependencies, and how to build/run/test/extend |
+| [docs/HISTORY.md](docs/HISTORY.md) | Version lineage and decompilation provenance |
+
 ## 🔧 Building
 
-### Maven + VS Code
-
-Builds on **Windows, Linux and macOS** with **JDK 17+** — the pom auto-selects the
-right SWT fragment for your OS/arch (verified in CI on all three). Verified to
-launch on Windows (Temurin 25).
+Requires **JDK 17+** and Maven; the pom auto-selects the SWT fragment for your OS/arch
+(verified in CI on Windows, Linux and macOS).
 
 ```bash
-mvn clean package        # compiles sancho-src/src, produces target/sancho-<version>.jar
-mvn compile              # just compile
+mvn clean package    # -> target/sancho-<version>.jar (+ the self-contained -all uber-jar)
+mvn exec:java        # run
 ```
 
-**Recommended VM args** (silence JDK native-access warnings):
-
-```text
---enable-native-access=ALL-UNNAMED
-```
-
-#### In VS Code
-
-1. Install the **Extension Pack for Java** (Red Hat).
-2. Open the repository folder — the Java extension imports the Maven project and
-   resolves dependencies automatically.
-3. Press **F5** / use the **"Sancho (GUI)"** run configuration in
-   [.vscode/launch.json](.vscode/launch.json).
-
-#### Dependencies
-
-Resolved from Maven Central: **Eclipse SWT + JFace**, **GNU Trove**
-(`gnu.trove`, Trove 2.x flat package), **JSch**, and **PircBot** (used by the IRC
-feature). The abandoned **GNU RegExp** dependency was dropped — regexes now run on
-the JDK's `java.util.regex` behind a thin `sancho.utility.regex` adapter.
-
-**SWT is platform-specific**, so the pom auto-selects the fragment for the build
-machine via OS/arch profiles (`win32`, `gtk.linux.x86_64/aarch64`,
-`cocoa.macosx.x86_64/aarch64`); override with
-`-Dswt.artifactId=org.eclipse.swt.<ws>.<os>.<arch>` if needed.
-
-Sancho injects three of its own classes into the `org.eclipse.jface.viewers`
-package (`ICustomViewer`, `CustomTableViewer`, `CustomTreeViewer`), and the JVM
-refuses to load them into the otherwise **signed** JFace jar. So a single,
-platform-independent **signature-stripped JFace** is kept in
-[`local-repo/`](local-repo/) under the `org.sancho.thirdparty` group id and
-consumed via a project-local Maven repository (with `.sha1`/`.md5` checksums so the
-build validates cleanly; regenerate with
-[`tools/unsign-libs.ps1`](tools/unsign-libs.ps1)). SWT itself is used unmodified
-(stock, signed) — nothing is injected into its packages.
-
-### Native packages (jpackage)
-
-[tools/build-app.ps1](tools/build-app.ps1) bundles a Java runtime with the app via
-`jpackage` — no separate JDK needed to run it. It is cross-platform (pwsh 7+):
+Native packages (MSI / DEB / RPM / DMG / app-image) are built with `jpackage`:
 
 ```powershell
-pwsh tools/build-app.ps1                # default: app-image (Windows/Linux) or dmg (macOS)
-pwsh tools/build-app.ps1 -Type deb      # or rpm / dmg / app-image
-# output under target/dist/
+pwsh tools/build-app.ps1 -Type msi      # or deb / rpm / dmg / app-image
 ```
 
-Requires JDK 17+ (for `jpackage`) and Maven on `PATH`. On Linux, `deb` needs
-dpkg/fakeroot and `rpm` needs rpmbuild. Releases build these automatically per OS
-(Windows portable `.zip`, Linux `.deb` + `.rpm`, macOS `.dmg`).
+Full build detail — VS Code F5 setup, the unsigned-JFace/`local-repo` strategy, native
+packaging, silent MSI install, CI/CD and the legacy AppImage — is in
+**[docs/DEVELOPMENT.md](docs/DEVELOPMENT.md)**.
 
-#### Torrent / protocol association (send to core on double-click)
+## 🔗 File & protocol associations (Windows)
 
-**With the `.msi` installer** this is offered up front: the setup dialog has a
-checkbox *"Register .torrent files and ed2k:, magnet:, sig2dat: links…"* (on by
-default). For a silent/unattended install, control it with the public property:
+Sancho can register `.torrent` files and the `ed2k:` / `magnet:` / `sig2dat:` / `sfdl:`
+protocols so double-clicking one hands it straight to the MLDonkey core
+(`sancho.exe -l "%1"`, `S_DLLINK`) without opening the full GUI:
 
-```powershell
-msiexec /i sancho-<ver>-win64.msi /qn REGISTERASSOC=0   # 0 = do not register
-```
+- **MSI installer:** a setup checkbox (on by default) registers them; skip it silently with
+  `msiexec /i sancho-<ver>-win64.msi /qn REGISTERASSOC=0`.
+- **Any build:** *Preferences → sancho: Windows registry* shows each association's current
+  state (Sancho / another app, user vs. machine) and registers **per-user** (`HKCU`, no
+  elevation) or, with *"Register for all users"*, machine-wide (`HKLM`, needs admin).
+- On Windows, Sancho **checks associations at startup** and offers to create any that are
+  missing (a checkbox turns the check off).
 
-The installer writes the associations to `HKLM\Software\Classes` (per-machine) with
-the command `"…\sancho.exe" "-l" "%1"` — the same layout the app itself uses.
-
-**Any install (portable zip too)** can also do it from inside the app — no external
-`.reg` editing needed:
-
-1. Run `sancho.exe` and open **Preferences → sancho: Windows registry**.
-2. Each protocol (`ed2k:`, `magnet:`, `sig2dat:`, `sfdl:`) and the `.torrent` extension
-   shows its **current state** — associated with Sancho or with another application, and at
-   user (`HKCU`) or machine (`HKLM`) level. Choose **Register association** (or **Unregister
-   association**) on the ones you want to change, then **Update windows registry**.
-3. By default it writes a **per-user** association under `HKCU\Software\Classes`, which needs
-   no elevation — it imports with `reg.exe`, not `regedit`. Tick *"Register for all users"* to
-   write machine-wide `HKEY_CLASSES_ROOT` instead, which does require administrator.
-
-On Windows, Sancho also **checks these associations at startup** (a checkbox on that page
-turns the check off). If any are completely unregistered it offers to create them at user or
-machine level — or to stop asking. Associations already owned by another application are left
-untouched.
-
-Double-clicking a `.torrent` (or an `ed2k:`/`magnet:` link) then runs
-`sancho.exe -l "<file-or-link>"`, which connects to the MLDonkey core and hands it the
-download directly (`S_DLLINK`), without opening the full GUI. As the preference page
-warns, for `.torrent` files the core should be able to read the file (same machine, or
-mldonkey core > 2.5.17).
-
-On an installed build the association command resolves to the real `sancho.exe` via the
-`jpackage.app-path` property jpackage sets on the launcher. Running the portable/dev jar that
-property is unset, so it falls back to the launcher's `-Duser.dir=$ROOTDIR` (which pins the
-working directory to the folder that contains `sancho.exe`).
-
-#### Unattended / silent install (MSI)
-
-The `.msi` is a standard Windows Installer package, so it installs silently with
-`msiexec`:
-
-```powershell
-# silent per-machine install (associations registered by default)
-msiexec /i sancho-<ver>-win64.msi /qn
-
-# silent install WITHOUT registering the .torrent/ed2k/magnet/sig2dat associations
-msiexec /i sancho-<ver>-win64.msi /qn REGISTERASSOC=0
-
-# choose the install directory, and write a verbose log
-msiexec /i sancho-<ver>-win64.msi /qn INSTALLDIR="C:\Apps\Sancho" /l*v install.log
-
-# silent uninstall
-msiexec /x sancho-<ver>-win64.msi /qn
-```
-
-Notes:
-
-- **`REGISTERASSOC`** (public property) — `1` (default) registers the associations,
-  `0` skips them. In an interactive install it maps to the setup dialog checkbox.
-- The install is **per-machine** (writes `HKLM`), so a silent install needs an
-  elevated/admin context.
-- `msiexec` flags: `/qn` no UI, `/qb` basic UI, `/norestart`, `/l*v <file>` full log.
-
-### Releases (GitHub Actions)
-
-Pushing a version tag builds on a Windows/Linux/macOS matrix and publishes one
-Release with all artifacts — Windows portable `.zip` + jar, Linux `.deb` + `.rpm`,
-macOS `.dmg` — using the matching [CHANGELOG.md](CHANGELOG.md) section as the notes:
-
-```bash
-git tag 0.9.4-63 && git push origin 0.9.4-63
-```
-
-### AppImage (legacy)
-
-An AppImage of the older build can be generated from the `appimage/` AppDir:
-
-```bash
-./appimagetool-x86_64.AppImage Sancho.AppDir/   # -> Sancho-x86_64.AppImage
-```
+Silent-install options and the internals are in
+[docs/DEVELOPMENT.md](docs/DEVELOPMENT.md) and [docs/API.md](docs/API.md#43-command-line-arguments).
 
 ## 🖥 Running
 
@@ -269,7 +142,7 @@ but preserved via the Internet Archive:
 <https://web.archive.org/web/20190304231314/http://sancho.awardspace.com/>
 
 Bundled/used third-party components remain under their own licenses: Eclipse
-SWT/JFace (EPL/CPL), GNU Trove (LGPL), JSch (BSD-style), PircBot. See
+SWT/JFace (EPL/CPL), GNU Trove (LGPL) and JSch (BSD-style). See
 [LICENSE](LICENSE) and [sancho-src/CPL.txt](sancho-src/CPL.txt).
 The upstream project's original changelog (2004–2006) is preserved at
 [`appimage/usr/bin/distrib/ChangeLog`](appimage/usr/bin/distrib/ChangeLog).
